# cobraagent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ENV_VARS.md  MANUAL_STEPS.md  Makefile  README.md  SECURITY.md  agent.py  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package.json  requirements.txt
.github/workflows/: agent-runner.yml  ci.yml
.zscripts/: dev.sh
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_create_users.py  0004_5_create_core_tables.py  0022_sync_source_org_scope.py
backend/app/: __init__.py  admin.py  main.py
backend/app/agents/: assistant.py
backend/app/agents/tools/: __init__.py
backend/app/api/: deps.py
backend/app/api/routes/v1/: __init__.py  admin_conversations.py  admin_ratings.py  admin_users.py  agent.py  auth.py  conversations.py  files.py  health.py  users.py
backend/app/commands/: cleanup.py  seed.py
backend/app/core/: config.py  csrf.py
backend/app/db/models/: __init__.py  conversation.py
backend/app/repositories/: __init__.py  chat_file.py  conversation.py  message_rating.py  user.py
backend/app/schemas/: conversation.py  conversation_share.py  message_rating.py  token.py
backend/app/services/: admin.py  agent.py  agent_session.py  conversation.py  conversation_share.py  file_upload.py  message_rating.py  user.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_admin.py  test_agents.py  test_commands.py  test_core.py  test_repositories.py  test_services.py  test_services_conversation.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_openapi.py  test_users.py
docs/: adding_features.md  architecture.md  commands.md  configuration.md  deploy.md  permissions.md
docs/howto/: customize-agent-prompt.md
e2e/: home.spec.ts
nginx/: nginx.conf
prisma/: schema.prisma
src/app/: apple-icon.tsx  globals.css  icon.tsx
src/app/[locale]/(dashboard)/dashboard/: page.tsx
src/app/[locale]/agent/: page.tsx
src/app/api/agent/config/: route.ts
src/app/api/agent/run/: route.ts
src/app/api/agent/runs/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/magic-link/request/: route.ts
src/app/api/auth/me/: route.ts
src/app/api/auth/oauth-callback/: route.ts
src/app/api/auth/password-reset/confirm/: route.ts
src/app/api/auth/password-reset/request/: route.ts
src/app/api/auth/refresh/: route.ts
src/app/api/auth/register/: route.ts
src/components/chat/: chat-controls.tsx  tool-call-card.tsx
src/components/dashboard/: quick-actions.tsx
src/components/layout/: command-palette.tsx  header.tsx  mobile-tab-bar.tsx  sidebar.tsx
src/hooks/: index.ts  use-chat.ts
src/lib/: constants.ts
src/lib/db/: auth.ts  index.ts  jwt.ts
src/stores/: index.ts
src/types/: index.ts
